--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,9 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
 
-    // RecyclerView
+    // Android support views
     compile 'com.android.support:recyclerview-v7:25.3.0'
+    compile 'com.android.support:cardview-v7:25.3.0'
 
     // picasso
     compile 'com.squareup.picasso:picasso:2.5.2'
